# Neutrino

./: .gitignore  .gitmodules  AES.cpp  AES.h  Base64.cpp  Base64.h  CMakeLists.txt  Credential.h  CredentialInfo.cpp  CredentialInfo.h  CryptoProvider.h  DB.h  Folder.h  IPEndPoint.cpp  IPEndPoint.h  Mail.cpp  Mail.h  MailAddress.cpp  MailAddress.h  MailManager.cpp  MailManager.h  MailParser.cpp  MailParser.h  Main.cpp  Nullable.h  Property.h  SpamFilter.cpp  SpamFilter.h  Utility.cpp  Utility.h
UI/: Common.cpp  Common.h  Mailitem.cpp  Mailitem.h  UIMain.cpp  UIMain.h  inbox.cpp  inbox.h  inbox.ui  inbox_detail.cpp  inbox_detail.h  inbox_detail.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  send.cpp  send.h  send.ui  welcome.cpp  welcome.h  welcome.ui
spambase/: params  test.data  train.data  wordlist.txt
